# loong_dora

./: qlong_inference_control.py
dora_digua_long/: README.md
dora_digua_long/examples/gen72/: pick-place-gen72.py  pick-place.yml
dora_digua_long/examples/openlong/: pick-place.yml  rosbridge.yml  udp_send.py
dora_digua_long/examples/python-ros2-dataflow/: random_turtle.py
dora_digua_long/node-hub/dora-gen72/: pyproject.toml
dora_digua_long/node-hub/dora-gen72/dora_gen72/: arm.py  gemini335.py
dora_digua_long/node-hub/dora-object-to-pose/src/: lib.rs
dora_digua_long/node-hub/dora-openlong-contrl/: pyproject.toml  setup.py
dora_digua_long/node-hub/dora-openlong-contrl/dora_openlong_contrl/: contrl.py  contrl_robot.py
dora_digua_long/node-hub/dora-openlong-contrl/sdk/loong_jnt_sdk/: loong_jnt_sdk_datas.py  loong_jnt_sdk_shm.py
dora_digua_long/node-hub/dora-openlong-contrl/sdk/loong_mani_sdk/: loong_mani_sdk_udp.py
dora_digua_long/node-hub/dora-openlong-udp/: pyproject.toml  setup.py
dora_digua_long/node-hub/dora-openlong-udp/dora_openlong_udp/: dora_demo.py  ros_brige.py  test.py  udp.py
dora_digua_long/node-hub/dora-openlong-udp/tests/: test_gen72.py
dora_digua_long/node-hub/dora-qwen2-5-vl/dora_qwen2_5_vl/: main.py
dora_digua_long/node-hub/dora-sam2/dora_sam2/: main.py
loong_sim_sdk_release/: .gitignore  license  readme.md
loong_sim_sdk_release/config/: arm_action.ini  arm_base.ini  ctrl_yyp.ini  driver.ini  driver_mujoco.ini  driver_sim.ini  interface.ini  plan_base.ini  plan_jnt_sdk.ini  plan_nimble.ini  plan_operate.ini  plan_rc.ini  plan_rl.ini  swing_arm.ini  thread.ini
loong_sim_sdk_release/model/: AzureLoong.urdf  AzureLoong.xml  AzureLoong_arms.urdf  scene.xml
loong_sim_sdk_release/model/meshes/: Link_arm_l_01.STL  Link_arm_l_02.STL  Link_arm_l_03.STL  Link_arm_l_04.STL  Link_arm_l_05.STL  Link_arm_l_06.STL  Link_arm_r_01.STL  Link_arm_r_02.STL  Link_arm_r_03.STL  Link_arm_r_04.STL  Link_arm_r_05.STL  Link_arm_r_06.STL
loong_sim_sdk_release/model/onnx/: policy_3052.onnx
loong_sim_sdk_release/py_jnt/: onnx_runner_lq.py  onnx_runner_yyp.py  test_.py  test_jnt.py  test_onnx.py
loong_sim_sdk_release/py_mani/: test_.py
loong_sim_sdk_release/sdk/loong_jnt_sdk/: loong_jnt_sdk_udp.py
loong_sim_sdk_release/tools/: py_ui.py  run_driver.sh  run_interface.sh  run_locomotion.sh  run_manipulation.sh  run_sim.sh
(+1 files in other folders)
